<resources>
    <string name="app_name">Kinrai-D</string>
    <string name="search_m">search the menu</string>
    <string name="insert_m">insert the menu</string>
    <string name="search_order_message">Search the menu</string>
    <string name="insert_order_message">Insert the menu</string>
    <string name="back">Back</string>
    <string name="Insert_activity_name">Insert Menu</string>
    <string name="search_activity_name">Search Menu</string>
    <string name="returnactivity">Back ot main</string>
    <string name="name_label">Name</string>
    <string name="name_of_food">Name of food</string>
    <string name="insert_menu_label">Insert menu</string>
    <string name="name">Name</string>
    <string name="enter_your_food_name">Enter your food name</string>
    <string name="meat_type">Meat type</string>
    <string name="insert_menu">Insert Menu</string>
    <string name="todo">TODO</string>
    <string name="noodle">NOODLE</string>
    <string name="rice">RICE</string>
    <string name="seafood">SEAFOOD</string>
    <string name="beef">BEEF</string>
    <string name="chicken">CHICKEN</string>
    <string name="pork">PORK</string>
    <string name="spicy">SPICY</string>
    <string name="not_spicy">NOT SPICY</string>
    <string name="insert_fd_name">ENTER YOUR FOOD NAME</string>
    <string name="insert_ph_num">ENTER PHONE NUMBER</string>
    <string name="insert_text">INSERT</string>
    <string name="search_menu">Search Menu</string>
    <string name="search">SEARCH</string>
    <string name="result">Result</string>


</resources>